--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <body>
     <h1>About</h1>
     <a href="index.html">Home</a>
-    <p>Welcome to my page.</p>
+    <p>Welcome to my  great about page.</p>
+    <p>My name is Petra</p>
 </body>
 </html>
